# django-bootstrap-input-group

./: MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  tox.ini
demo/: README.md  requirements.txt
demo/app/: forms.py  settings.py  urls.py  views.py
demo/app/templates/app/: base.html
src/django_bootstrap_input_group/: fields.py  renderer.py  renderers.py  widgets.py
src/django_bootstrap_input_group.egg-info/: PKG-INFO  SOURCES.txt
src/django_bootstrap_input_group/templates/input_group/: input_group.html
src/django_bootstrap_input_group/templatetags/: django_bootstrap_input_group.py  grouped.py
tests/: case.py  settings.py  test.py  test_group_renderer.py  test_grouped_form.py  test_grouped_formset.py
